--- a/admin/css/codemirror.css
+++ b/admin/css/codemirror.css
@@ -261,28 +261,28 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: #f22;}
 #option-custom-css,
 #tablepress-page .CodeMirror {
 	font-family: Consolas, Monaco, monospace;
-	font-size: 12px;
-	line-height: inherit;
-	width: 98%;
+	font-size: 14px;
+	line-height: 1.4;
+	width: 99%;
 	height: 100px;
 	margin: 1px 1px 7px;
 }
 #option-custom-css {
 	margin: 1px;
 	-moz-tab-size: 2;
-	-o-tab-size: 2;
 	tab-size: 2;
 }
 #tablepress-page .CodeMirror-scroll {
 	background-color: #ffffff;
-	border: 1px solid #dfdfdf;
-	border-radius: 3px;
+	border: 1px solid #dddddd;
+	box-shadow: inset 0 1px 2px rgba(0,0,0,0.07);
 	height: 98px;
 	padding-bottom: 0;
 	margin-right: 0;
 }
+#option-custom-css,
 #tablepress-page .CodeMirror-lines {
-	padding: 3px;
+	padding: 4px 6px 1px 6px;
 }
 #tablepress-page .CodeMirror pre {
 	padding: 0;
@@ -290,12 +290,17 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: #f22;}
 #tablepress-page .CodeMirror.disabled .CodeMirror-scroll {
 	background-color: #eeeeee;
 }
-#option-custom-css:focus,
 #tablepress-page .CodeMirror-focused .CodeMirror-scroll {
-	border-color: #a1a1a1;
-	-webkit-box-shadow: 1px 1px 2px rgba(0,0,0,0.1);
-	box-shadow: 1px 1px 2px rgba(0,0,0,0.1);
+	border-color: #999999;
 }
+#tablepress-page .CodeMirror-focused {
+	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.1);
+	box-shadow: 0 1px 2px rgba(0,0,0,0.1);
+}
+#tablepress-page .CodeMirror-focused .CodeMirror-scroll {
+	box-shadow: none;
+}
+
 #tablepress-page .CodeMirror.large {
 	height: 500px;
 }
