Some CSS adjustments after recent changes in WP 3.8-dev

--- a/admin/css/common.css
+++ b/admin/css/common.css
@@ -154,8 +154,7 @@
 	margin-right: 20px; /* some margin on radio buttons */
 }
 #tablepress-page input,
-#tablepress-page .button,
-#tablepress-page select {
+#tablepress-page .button {
 	vertical-align: middle;
 }
 #tablepress-page .widefat th input {
