--- a/admin/css/common.css
+++ b/admin/css/common.css
@@ -85,12 +85,13 @@
 	background: transparent;
 	border: none;
 	color: #333333;
-	width: 120px;
+	width: 110px;
 	margin: 0;
 	padding: 0;
 	font-weight: bold;
 	-webkit-box-shadow: none;
 	box-shadow: none;
+	vertical-align: top;
 }
 #tablepress-page .table-shortcode {
 	cursor: text;
