--- a/admin/css/common.css
+++ b/admin/css/common.css
@@ -76,6 +76,7 @@
 	font-weight: bold;
 	-webkit-box-shadow: none;
 	box-shadow: none;
+	text-align: center;
 	vertical-align: top;
 }
 #tablepress-page .table-shortcode {
