--- a/admin/css/codemirror.css
+++ b/admin/css/codemirror.css
@@ -275,6 +275,7 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: #f22;}
 #tablepress-page .CodeMirror-scroll {
 	background-color: #ffffff;
 	border: 1px solid #dddddd;
+	-webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.07);
 	box-shadow: inset 0 1px 2px rgba(0,0,0,0.07);
 	height: 98px;
 	padding-bottom: 0;
@@ -298,6 +299,7 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: #f22;}
 	box-shadow: 0 1px 2px rgba(0,0,0,0.1);
 }
 #tablepress-page .CodeMirror-focused .CodeMirror-scroll {
+	-webkit-box-shadow: none;
 	box-shadow: none;
 }
 
