Increase width of table ID field on „Edit“ screen

--- a/admin/css/edit.css
+++ b/admin/css/edit.css
@@ -109,6 +109,9 @@ body,
 	width: 65px;
 	padding: 3px 5px;
 }
+#tablepress-page #table-new-id {
+	width: 120px;
+}
 
 /* table cells */
 #edit-form-body td {
