--- a/css/default.css
+++ b/css/default.css
@@ -189,6 +189,7 @@
 }
 .paging_full_numbers a {
 	border: 1px solid #aaaaaa;
+	-webkit-border-radius: 5px;
 	border-radius: 5px;
 	padding: 2px 5px;
 	margin: 0 3px;
