--- a/css/default-rtl.css
+++ b/css/default-rtl.css
@@ -191,6 +191,7 @@
 }
 .paging_full_numbers a {
 	border: 1px solid #aaaaaa;
+	-webkit-border-radius: 5px;
 	border-radius: 5px;
 	padding: 2px 5px;
 	margin: 0 3px;
