--- a/admin/css/common-rtl.css
+++ b/admin/css/common-rtl.css
@@ -1,5 +1,7 @@
 /**
- * CSS code for all TablePress admin screens, special things for RTL languages
+ * CSS code for all TablePress admin screens, special things for RTL languages.
+ *
+ * Fixes for certain elements that should remain LTR.
  *
  * @package TablePress
  * @subpackage Views CSS
@@ -7,9 +9,6 @@
  * @since 1.1.0
  */
 
-/*
- * Fixes for certain elements that should remain LTR
- */
 #tablepress_about-debug-version-information .inside p {
 	direction: ltr;
 }
