Update to CodeMirror 4.0.3

--- a/admin/css/codemirror.css
+++ b/admin/css/codemirror.css
@@ -46,7 +46,6 @@
 
 .CodeMirror div.CodeMirror-cursor {
 	border-left: 1px solid black;
-	z-index: 3;
 }
 /* Shown when moving in bi-directional text */
 .CodeMirror div.CodeMirror-secondarycursor {
@@ -56,10 +55,9 @@
 	width: auto;
 	border: 0;
 	background: #7e7;
-	z-index: 1;
 }
 /* Can style cursor different in overwrite (non-insert) mode */
-.CodeMirror div.CodeMirror-cursor.CodeMirror-overwrite {}
+div.CodeMirror-overwrite div.CodeMirror-cursor {}
 
 .cm-tab { display: inline-block; }
 
@@ -240,11 +238,16 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: #f22;}
 
 .CodeMirror div.CodeMirror-cursor {
 	position: absolute;
-	visibility: hidden;
 	border-right: none;
 	width: 0;
 }
-.CodeMirror-focused div.CodeMirror-cursor {
+
+div.CodeMirror-cursors {
+	visibility: hidden;
+	position: relative;
+	z-index: 1;
+}
+.CodeMirror-focused div.CodeMirror-cursors {
 	visibility: visible;
 }
 
@@ -256,9 +259,12 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: #f22;}
 	background: rgba(255, 255, 0, .4);
 }
 
+/* Used to force a border model for a node */
+.cm-force-border { padding-right: .1px; }
+
 @media print {
 	/* Hide the cursor when printing */
-	.CodeMirror div.CodeMirror-cursor {
+	.CodeMirror div.CodeMirror-cursors {
 		visibility: hidden;
 	}
 }
