--- a/admin/css/codemirror.css
+++ b/admin/css/codemirror.css
@@ -42,6 +42,9 @@
 	box-sizing: content-box;
 }
 
+.CodeMirror-guttermarker { color: black; }
+.CodeMirror-guttermarker-subtle { color: #999; }
+
 /* CURSOR */
 
 .CodeMirror div.CodeMirror-cursor {
@@ -56,6 +59,23 @@
 	border: 0;
 	background: #7e7;
 }
+.cm-animate-fat-cursor {
+	width: auto;
+	border: 0;
+	-webkit-animation: blink 1.06s steps(1) infinite;
+	animation: blink 1.06s steps(1) infinite;
+}
+@-webkit-keyframes blink {
+	0% { background: #7e7; }
+	50% { background: none; }
+	100% { background: #7e7; }
+}
+@keyframes blink {
+	0% { background: #7e7; }
+	50% { background: none; }
+	100% { background: #7e7; }
+}
+
 /* Can style cursor different in overwrite (non-insert) mode */
 div.CodeMirror-overwrite div.CodeMirror-cursor {}
 
@@ -101,8 +121,14 @@ div.CodeMirror-overwrite div.CodeMirror-cursor {}
 .cm-s-default .cm-error {color: #f00;}
 .cm-invalidchar {color: #f00;}
 
+/* Default styles for common addons */
+
 div.CodeMirror span.CodeMirror-matchingbracket {color: #0f0;}
 div.CodeMirror span.CodeMirror-nonmatchingbracket {color: #f22;}
+.CodeMirror-matchingtag {
+	background: #ff9600;
+	background: rgba(255, 150, 0, .3);
+}
 .CodeMirror-activeline-background {background: #e8f2ff;}
 
 /* STOP */
