"Edit" screen: Move backdrop of the wpLink dialog above the "Advanced Editor" dialog

--- a/admin/css/edit.css
+++ b/admin/css/edit.css
@@ -44,6 +44,11 @@ body,
 	z-index: 301103;
 }
 
+/* Move backdrop of the wpLink dialog above the "Advanced Editor" dialog */
+body #wp-link-backdrop {
+	z-index: 100103;
+}
+
 /* Table Preview (CSS for actual preview is directly in the preview HTML) */
 #table-preview-iframe {
 	width: 100%;
