--- a/css/default-rtl.css
+++ b/css/default-rtl.css
@@ -121,88 +121,77 @@
 .dataTables_paginate {
 	float: right;
 	margin: 4px 0 0;
-	padding: 0 15px;
 	direction: rtl;
 }
-/* Two button pagination - previous/next */
 .dataTables_paginate a {
 	color: #111111 !important;
 	display: inline-block;
 	outline: none;
 	position: relative;
 	text-decoration: underline;
-	text-decoration: none\0/IE; /* Hack for IE8, 9, and IE10pp4, as those have trouble with text-decoration in :after pseudo-elements */
+	text-decoration: none\0/IE; /* Hack for IE8, IE9, and IE10pp4, as those have trouble with text-decoration in :after pseudo-elements */
+	margin: 0 5px;
 }
-.dataTables_paginate .paginate_disabled_previous,
-.dataTables_paginate .paginate_disabled_next {
-	color: #999999 !important;
-	text-decoration: none;
+.dataTables_paginate a:first-child {
+	margin-right: 0;
 }
-.paginate_disabled_next,
-.paginate_enabled_next {
-	margin-right: 10px;
+.dataTables_paginate a:last-child {
+	margin-left: 0;
 }
-.paginate_enabled_previous:hover,
-.paginate_enabled_next:hover {
+.paginate_button:hover {
 	cursor: pointer;
 	text-decoration: none;
 }
-.paginate_disabled_previous:after,
-.paginate_enabled_previous:after,
-.paginate_disabled_next:before,
-.paginate_enabled_next:before {
+.paginate_button.disabled {
+	color: #999999 !important;
+	text-decoration: none;
+	cursor: default;
+}
+.paginate_button.current {
+	font-weight: bold;
+	text-decoration: none;
+	cursor: default;
+}
+/* Two button pagination - previous/next */
+.dataTables_paginate.paging_simple {
+	padding: 0 15px;
+}
+.paging_simple .paginate_button.previous:before,
+.paging_simple .paginate_button.next:after {
 	text-align: right;
 	font-family: TablePress;
 	font-size: 14px;
 	font-weight: bold;
 	-webkit-font-smoothing: antialiased;
 	content: "\f054";
-	color: #d9edf7;
 	text-shadow: 0.1em 0.1em #666666;
 	position: absolute;
 	top: 0;
-	bottom: 0;
 	right: -14px;
+	bottom: 0;
+	left: auto;
 	margin: auto;
 	height: 14px;
 	width: 14px;
 	line-height: 1;
 }
-.paginate_disabled_next:before,
-.paginate_enabled_next:before {
+.paging_simple .paginate_button.next:after {
 	text-align: left;
 	content: "\f053";
 	right: auto;
 	left: -14px;
 }
-.paginate_disabled_previous:after,
-.paginate_disabled_next:before {
-	color: #f9f9f9;
+.paginate_button:before,
+.paginate_button:after {
+	color: #d9edf7;
 }
-.paginate_enabled_previous:hover:after,
-.paginate_enabled_next:hover:before {
+.paginate_button:hover:before,
+.paginate_button:hover:after {
 	color: #049cdb;
 }
-
-/* Full number pagination */
-.paging_full_numbers {
-	height: 22px;
-	line-height: 22px;
-}
-.paging_full_numbers a {
-	border: 1px solid #aaaaaa;
-	-webkit-border-radius: 5px;
-	border-radius: 5px;
-	padding: 2px 5px;
-	margin: 0 3px;
-	color: #333333 !important;
-	background-color: #dddddd;
-}
-.paging_full_numbers .paginate_button:hover {
-	background-color: #cccccc;
-}
-.paging_full_numbers .paginate_active {
-	background-color: #99b3ff;
+.paginate_button.disabled:before,
+.paginate_button.disabled:after {
+	color: #f9f9f9;
 }
 
 /* Processing indicator */
@@ -269,7 +258,7 @@
 
 /* Self clearing - */
 .dataTables_wrapper:after {
-	content: ".";
+	content: "";
 	display: block;
 	clear: both;
 	visibility: hidden;
