Default CSS: Reset the `float` property for all table cells, and not just the last column, as there are more and more reports about issues where themes e.g. set a `float` on CSS classes like `.column-1`, etc.

--- a/css/default.css
+++ b/css/default.css
@@ -41,14 +41,10 @@
 	border: none;
 	background: none;
 	text-align: left;
+	float: none !important;
 }
 .tablepress tbody td {
 	vertical-align: top;
-}
-
-/* Fix right column float in many themes */
-.tablepress [class*="column"]+[class*="column"]:last-child {
-	float: none;
 }
 
 /* Horizontal borders */
