--- a/css/default-rtl.css
+++ b/css/default-rtl.css
@@ -207,21 +207,14 @@
 .dataTables_wrapper .sorting,
 .dataTables_wrapper .sorting_asc,
 .dataTables_wrapper .sorting_desc {
+	position: relative;
 	padding-left: 20px; /* more left padding for sort arrows */
 	cursor: pointer;
 	outline: none;
 }
-.dataTables_wrapper .sorting div,
-.dataTables_wrapper .sorting_asc div,
-.dataTables_wrapper .sorting_desc div {
-	position: relative;
-	margin: 0 !important;
-	padding: 0 !important;
-	float: none !important;
-}
-.dataTables_wrapper .sorting div:before,
-.dataTables_wrapper .sorting_asc div:before,
-.dataTables_wrapper .sorting_desc div:before {
+.dataTables_wrapper .sorting:before,
+.dataTables_wrapper .sorting_asc:before,
+.dataTables_wrapper .sorting_desc:before {
 	font-family: TablePress;
 	font-weight: normal;
 	font-size: 14px;
@@ -229,21 +222,20 @@
 	position: absolute;
 	top: 0;
 	bottom: 0;
-	left: -14px;
+	left: 6px;
 	right: auto;
 	margin: auto;
 	height: 14px;
 	line-height: 1;
-	padding: 1px 0 0;
 }
-.dataTables_wrapper .sorting div:before {
+.dataTables_wrapper .sorting:before {
 	content: "\f0dc";
 }
-.dataTables_wrapper .sorting_asc div:before {
+.dataTables_wrapper .sorting_asc:before {
 	content: "\f0d8";
-	padding: 0 0 1px;
+	padding: 0 0 2px;
 }
-.dataTables_wrapper .sorting_desc div:before {
+.dataTables_wrapper .sorting_desc:before {
 	content: "\f0d7";
 }
 .dataTables_wrapper .sorting:hover,
@@ -251,8 +243,12 @@
 .dataTables_wrapper .sorting_desc {
 	background-color: #049cdb;
 }
+/* Hide the sorting arrows in the extra table that is added for scrolling */
+.dataTables_wrapper .dataTables_scrollBody thead th:before {
+	content: "";
+}
 
-/* Self clearing - */
+/* Self clearing */
 .dataTables_wrapper:after {
 	content: "";
 	display: block;
