Switch to new naming scheme for CSS classes of notice boxes, and make them dismissible (where suitable). See https://core.trac.wordpress.org/ticket/31233.

--- a/admin/css/edit.css
+++ b/admin/css/edit.css
@@ -87,7 +87,7 @@ body #wp-link-backdrop {
 	vertical-align: middle;
 }
 
-/* Margins for dynamically created (inline) .error/.updated messages */
+/* Margins for dynamically created (inline) .notice messages */
 #tablepress-page div.ajax-alert {
 	margin: -10px 0 15px;
 }
