Use a `h1` heading as the first heading on all screens, and add CSS to restore the font size.

--- a/admin/css/common.css
+++ b/admin/css/common.css
@@ -13,14 +13,11 @@
 }
 
 /* Nav Tab Menu */
+#tablepress-nav  {
+	font-size: 23px;
+}
 #tablepress-nav .separator {
 	margin: 6px;
-}
-#tablepress-nav .nav-tab {
-	border-bottom: 1px solid #cccccc;
-}
-#tablepress-nav .nav-tab-active {
-	border-bottom: 1px solid #f1f1f1;
 }
 
 /* Add New Table form */
