Restore visibility of sorting arrows on the "Edit" screen after https://core.trac.wordpress.org/changeset/34323.

--- a/admin/css/edit.css
+++ b/admin/css/edit.css
@@ -203,12 +203,12 @@ body #wp-link-backdrop {
 	margin-right: 2px;
 }
 #edit-form-head .sorting-indicator {
-	display: block;
+	display: block; /* BC for WP 4.3, can be removed later */
+	visibility: visible;
 }
 #edit-form-head .sort-asc .sorting-indicator:before {
 	content: '\f142';
 }
-
 #edit-form-head .sort-desc .sorting-indicator:before {
 	content: '\f140';
 }
