--- a/admin/css/codemirror.css
+++ b/admin/css/codemirror.css
@@ -345,10 +345,12 @@ span.CodeMirror-selectedtext { background: none; }
 	tab-size: 2;
 }
 #tablepress-page .CodeMirror-scroll {
-	background-color: #ffffff;
-	border: 1px solid #dddddd;
-	-webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.07);
-	box-shadow: inset 0 1px 2px rgba(0,0,0,0.07);
+	background-color: #fff;
+	border: 1px solid #ddd;
+	-webkit-box-shadow: inset 0 1px 2px rgba( 0, 0, 0, 0.07 );
+	box-shadow: inset 0 1px 2px rgba( 0, 0, 0, 0.07 );
+	-webkit-transition: 0.05s border-color ease-in-out;
+	transition: 0.05s border-color ease-in-out;
 	height: 98px;
 	padding-bottom: 0;
 	margin-right: 0;
@@ -364,11 +366,11 @@ span.CodeMirror-selectedtext { background: none; }
 	background-color: #eeeeee;
 }
 #tablepress-page .CodeMirror-focused .CodeMirror-scroll {
-	border-color: #999999;
+	border-color: #5b9dd9;
 }
 #tablepress-page .CodeMirror-focused {
-	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.1);
-	box-shadow: 0 1px 2px rgba(0,0,0,0.1);
+	-webkit-box-shadow: 0 0 2px rgba( 30, 140, 190, 0.8 );
+	box-shadow: 0 0 2px rgba( 30, 140, 190, 0.8 );
 }
 #tablepress-page .CodeMirror-focused .CodeMirror-scroll {
 	-webkit-box-shadow: none;
