Restore resizability of table input field <textarea>s on the "Edit" screen, after they had been limited to vertical resizing by https://core.trac.wordpress.org/ticket/33400.

--- a/admin/css/edit.css
+++ b/admin/css/edit.css
@@ -139,6 +139,7 @@ body #wp-link-backdrop {
 	width: 100%;
 	width: auto\0/IE; /* IE hack, as cells will otherwise shrink and overlap instead of horizontal scrolling kicking in */
 	height: 100%;
+	resize: both;
 }
 #edit-form-body textarea:focus {
 	border-color: #333333;
