--- a/admin/css/codemirror.css
+++ b/admin/css/codemirror.css
@@ -334,7 +334,7 @@ span.CodeMirror-selectedtext { background: none; }
 	font-family: Consolas, Monaco, monospace;
 	font-size: 14px;
 	line-height: 1.4;
-	width: 99%;
+	width: 99% !important; /* The !important flag overrides a jQueryUI resizable inline style. */
 	height: 100px;
 	margin: 1px 1px 7px;
 }
@@ -351,7 +351,9 @@ span.CodeMirror-selectedtext { background: none; }
 	box-shadow: inset 0 1px 2px rgba( 0, 0, 0, 0.07 );
 	-webkit-transition: 0.05s border-color ease-in-out;
 	transition: 0.05s border-color ease-in-out;
-	height: 98px;
+	height: 100%; /* Fallback for browsers that don't support calc() */
+	height: -webkit-calc( 100% - 2px );
+	height: calc( 100% - 2px );
 	padding-bottom: 0;
 	margin-right: 0;
 }
@@ -376,10 +378,25 @@ span.CodeMirror-selectedtext { background: none; }
 	-webkit-box-shadow: none;
 	box-shadow: none;
 }
-
 #tablepress-page .CodeMirror.large {
 	height: 500px;
 }
-#tablepress-page .CodeMirror.large .CodeMirror-scroll {
-	height: 498px;
+
+/* jQuery UI resizable styles, for the resizable CodeMirror instance */
+.ui-resizable {
+	position: relative;
+}
+.ui-resizable-handle {
+	position: absolute;
+	font-size: 0.1px;
+	display: block;
+	-ms-touch-action: none;
+	touch-action: none;
+}
+.ui-resizable-s {
+	cursor: s-resize;
+	height: 7px;
+	width: 100%;
+	bottom: -5px;
+	left: 0;
 }
