--- a/admin/css/codemirror.css
+++ b/admin/css/codemirror.css
@@ -53,7 +53,7 @@
 }
 .cm-fat-cursor .CodeMirror-cursor {
 	width: auto;
-	border: 0;
+	border: 0 !important;
 	background: #7e7;
 }
 .cm-fat-cursor div.CodeMirror-cursors {
@@ -189,12 +189,14 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: #f22;}
 
 .CodeMirror-gutters {
 	position: absolute; left: 0; top: 0;
+	min-height: 100%;
 	z-index: 3;
 }
 .CodeMirror-gutter {
 	white-space: normal;
 	height: 100%;
 	display: inline-block;
+	vertical-align: top;
 	margin-bottom: -30px;
 }
 .CodeMirror-gutter-wrapper {
@@ -241,6 +243,9 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: #f22;}
 	position: relative;
 	overflow: visible;
 	-webkit-tap-highlight-color: transparent;
+	-webkit-font-variant-ligatures: none;
+	-moz-font-variant-ligatures: none;
+	font-variant-ligatures: none;
 }
 .CodeMirror-wrap pre {
 	word-wrap: break-word;
