--- a/css/default-rtl.css
+++ b/css/default-rtl.css
@@ -202,6 +202,13 @@
 .dataTables_scrollBody {
 	-webkit-overflow-scrolling: touch;
 }
+.dataTables_wrapper .dataTables_scroll div.dataTables_scrollBody th > div.dataTables_sizing,
+.dataTables_wrapper .dataTables_scroll div.dataTables_scrollBody td > div.dataTables_sizing {
+	height: 0;
+	overflow: hidden;
+	margin: 0 !important;
+	padding: 0 !important;
+}
 
 /* Sorting */
 .tablepress .sorting,
