Add some spacing between the label in the input field for the DataTables search field.

--- a/css/default-rtl.css
+++ b/css/default-rtl.css
@@ -105,6 +105,9 @@
 	float: right;
 	white-space: nowrap;
 }
+.dataTables_wrapper .dataTables_filter input {
+	margin-right: 0.5em;
+}
 
 /* Table information */
 .dataTables_info {
