--- a/admin/css/codemirror.css
+++ b/admin/css/codemirror.css
@@ -249,9 +249,9 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: #f22;}
 	position: relative;
 	overflow: visible;
 	-webkit-tap-highlight-color: transparent;
-	-webkit-font-variant-ligatures: none;
-	-moz-font-variant-ligatures: none;
-	font-variant-ligatures: none;
+	-webkit-font-variant-ligatures: contextual;
+	-moz-font-variant-ligatures: contextual;
+	font-variant-ligatures: contextual;
 }
 .CodeMirror-wrap pre {
 	word-wrap: break-word;
