--- a/admin/css/codemirror.css
+++ b/admin/css/codemirror.css
@@ -6,6 +6,7 @@
 	font-family: monospace;
 	height: 300px;
 	color: black;
+	direction: ltr;
 }
 
 /* PADDING */
@@ -114,7 +115,7 @@
 .cm-s-default .cm-property,
 .cm-s-default .cm-operator {}
 .cm-s-default .cm-variable-2 {color: #05a;}
-.cm-s-default .cm-variable-3 {color: #085;}
+.cm-s-default .cm-variable-3, .cm-s-default .cm-type {color: #085;}
 .cm-s-default .cm-comment {color: #a50;}
 .cm-s-default .cm-string {color: #a11;}
 .cm-s-default .cm-string-2 {color: #f50;}
@@ -320,8 +321,8 @@ div.CodeMirror-dragcursors {
 .CodeMirror-line::selection, .CodeMirror-line > span::selection, .CodeMirror-line > span > span::selection { background: #d7d4f0; }
 
 .cm-searching {
-	background: #ffa;
-	background: rgba(255, 255, 0, .4);
+	background-color: #ffa;
+	background-color: rgba(255, 255, 0, .4);
 }
 
 /* Used to force a border model for a node */
