--- a/admin/css/edit.css
+++ b/admin/css/edit.css
@@ -142,6 +142,8 @@ body #wp-link-backdrop {
 #edit-form-body textarea {
 	display: block;
 	min-width: 150px;
+	border-color: #dddddd;
+	border-radius: 0;
 	width: 100%;
 	width: auto\0/IE; /* IE hack, as cells will otherwise shrink and overlap instead of horizontal scrolling kicking in */
 	height: 100%;
