Admin CSS: Make UI elements the same size/height for better alignment. This is necessary, as WordPress 5.3 doesn't set the same heights for e.g. buttons and dropdowns.

--- a/admin/css/common.css
+++ b/admin/css/common.css
@@ -154,3 +154,12 @@
 #tablepress-page select {
 	vertical-align: baseline;
 }
+/* Equal heights for UI elements */
+#tablepress-page textarea,
+.tablepress-postbox-table .button {
+	margin: 1px;
+}
+#tablepress-page .button,
+#tablepress-page select {
+	min-height: 30px;
+}
