--- a/admin/css/edit.css
+++ b/admin/css/edit.css
@@ -147,6 +147,7 @@ body #wp-link-backdrop {
 	width: auto\0/IE; /* IE hack, as cells will otherwise shrink and overlap instead of horizontal scrolling kicking in */
 	height: 100%;
 	resize: both;
+	margin: 0;
 }
 #edit-form-body textarea:focus {
 	border-color: #333333;
