Admin CSS: Remove no-longer necessary CSS as WP 5.3.1 now assign equal heights.

--- a/admin/css/common.css
+++ b/admin/css/common.css
@@ -153,12 +153,8 @@
 #tablepress-page select {
 	vertical-align: baseline;
 }
-/* Equal heights for UI elements */
+/* Proper alignment of elements */
 #tablepress-page textarea,
 .tablepress-postbox-table .button {
 	margin: 1px;
-}
-#tablepress-page .button,
-#tablepress-page select {
-	min-height: 30px;
 }
